--- a/modules/ROOT/pages/deployment/general/ocis-init.adoc
+++ b/modules/ROOT/pages/deployment/general/ocis-init.adoc
@@ -14,7 +14,7 @@ In general, the xref:deployment/general/general-info.adoc#initialize-infinite-sc
  
 ==== Docker Compose
 
-When deploying via `docker compose` as described in xref:deployment/container/orchestration/orchestration.adoc[Container Orchestration], you will find in the examples provided the following command:
+When deploying via `docker compose` as described in the xref:depl-examples/ubuntu-compose/ubuntu-compose-prod.adoc[Local Production Setup] deployment example, you will find in the compose examples provided the following command:
 
 [source,bash]
 ----
@@ -22,10 +22,6 @@ command: ["-c", "ocis init || true; ocis server"]
 ----
 
 When executed, this command will run `ocis init`, but skips initialisation if there is a configuration found. In case it is not found, `ocis.yaml` will be created and any output of the initialisation will get logged.
-
-==== Kubernetes
-
-When deploying via Kuberentes and Helm Charts as described in xref:deployment/container/orchestration/orchestration.adoc[Container Orchestration] you can run the `ocis init` command once to get the minimum configuration parameters, but any configuration must be handed over either via environment variables and/or via the Helm Chart / yaml files! Use the provided Helm Charts as your configuration base and adjust as needed.
 
 == Command Notes
 
