--- a/modules/ROOT/partials/multi-location/compose-version.adoc
+++ b/modules/ROOT/partials/multi-location/compose-version.adoc
@@ -1,24 +1,27 @@
 ////
-depending of the version (production/rolling) attributes get defined dynamically
+depending of the version (production/rolling), attributes get defined dynamically
 
-'compose_tab_text' from the version (branch) can be 'master' (only in next). in this case we must use the site.yml's 'ocis-rolling-version' to point to a number and not master. this is necessary to dynamically have a version number used and never master as this does not work with docker! we also cant use 'latest' as we have to stick to the referenced stable version.
+if the branch is master, identified via the component version equals 'next', we have a rolling release
+if the branch is anything else, it is a production version and has its own branch
 
-antora-component-version: is either next or a branched version defined in antora.yml
-ocis-rolling-version:     is the actual rolling version defined in site.yml
-compose_tab_text:         is either master or a stable version defined in antora.yml
+the outcome guarantees that we always access the correct paths to get or reference source files from
+
+ocis-rolling-version:     defined in site.yml:      is the actual rolling version
+ocis_repo_url_component:  defined in antora.yml:    is either master or a branched version
+page-component-version:   intrinsic via antora.yml: is either next or a branched version like 7.1
+(antora-component-version: intrinsic via antora.yml: is either next or a branched version like 7.1)
 ////
 
-// production (because it is an own branch)
-// antora.yml: like master or stable-7.1
+// first we define the default
+// production (because it has an own doc branch)
+// url is either master or like stable-7.1
 :compose_version: {ocis_repo_url_component}
 :version-type: production
-:download-type: stable
 
-ifeval::["{antora-component-version}" == "next"]
-
+ifeval::["{page-component-version}" == "next"]
+// but if it is the master branch defined as next, we need to redefine
 // rolling (it is in the master branch which is next)
-// global-attrtibutes.yml: like v6.6.1
+// global-attrtibutes.yml: like v6.6.1 or v7.1.1
 :compose_version: v{ocis-rolling-version}
 :version-type: rolling
-:download-type: rolling
 endif::[]
