--- a/modules/ROOT/pages/deployment/services/s-list/frontend.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/frontend.adoc
@@ -105,6 +105,10 @@ To save network trips the sharing implementation can cache the stat requests wit
 
 Setting `FRONTEND_OCS_RESOURCE_INFO_CACHE_TTL=60` (deprecated) would cache the stat info for 60 seconds. Increasing this value makes sense for large deployments with thousands of active users that keep the cache up to date. Low frequency usage scenarios should not expect a noticeable improvement.
 
+== Space Management Through OIDC Claims
+
+When **Space Management Through OIDC Claims** has been enabled in the xref:{s-path}/proxy.adoc[proxy] service via the environment variable `OCIS_CLAIM_MANAGED_SPACES_ENABLED`, this environment variable must also be set for the {service_name} service. This is necessary to block adding or removing users to or from spaces through the web UI.
+
 == Scalability
 
 While the frontend service does not persist any data, it does cache information about files and filesystem (`Stat()`) responses and user information. Therefore, multiple instances of this service can be spawned in a bigger deployment like when using container orchestration with Kubernetes, when configuring `FRONTEND_OCS_RESOURCE_INFO_CACHE_STORE` (deprecated) and the related config options.
